fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,8 @@ body {
 }
 
 .recon-logo {
-    margin-top: 20px;
-    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-bottom: 15px;
 }
 
 .landing-heading {
